--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,6 +28,12 @@
     ),
     url(../img/nat-4.jpg);
     background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -11rem;
+
+    & > * {
+        transform: skewY(7deg);
+    }
 }
 
 // END 2.0 - section-feature
