--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,21 +1,18 @@
 ////////////////////////////////////////////////////////////////////////////////
 // TABLE OF CONTENTS
-// 1.0 - u-center-text
-// 2.0 - u-margin-bottom-big
-// 3.0 - u-margin-bottom-small
+// u-center-text
+// .u-margin-top-big
+// .u-margin-top-huge
+// u-margin-bottom-big
+// u-margin-bottom-big
+// u-margin-bottom-small
 ////////////////////////////////////////////////////////////////////////////////
-
-// 1.0 - u-center-text
-//******************************************************************************
 
 .u-center-text { text-align: center; }
 
-// 2.0 - u-margin-bottom-big
-//******************************************************************************
-
-.u-margin-bottom-big { margin-bottom: 8rem; }
-
-// 3.0 - u-margin-bottom-small
-//******************************************************************************
+.u-margin-top-big { margin-top: 8rem; }
+.u-margin-top-huge { margin-top: 10rem; }
 
 .u-margin-bottom-small { margin-bottom: 1.5rem; }
+.u-margin-bottom-medium { margin-bottom: 4rem; }
+.u-margin-bottom-big { margin-bottom: 8rem; }
