Complete stories section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,7 @@
 // 1.0 - section-about
 // 2.0 - section-features
 // 3.0 - section-tours
+// 4.0 - section-stories
 ////////////////////////////////////////////////////////////////////////////////
 
 
@@ -49,4 +50,15 @@
 }
 
 // END 3.0 - section-tours
+//******************************************************************************
+
+// 4.0 - section-stories
+//******************************************************************************
+
+.section-stories {
+    padding: 15rem 0;
+    position: relative;
+}
+
+// END 4.0 - section-stories
 //******************************************************************************
