--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,8 +12,10 @@
 @import "components/cards";
 @import "components/compositions";
 @import "components/feature-box";
+@import "components/form";
 @import "components/story";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
