Complete main navigation

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,6 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // TABLE OF CONTENTS
 // 1.0 - clearfix
+// 2.0 - center-h-v
 ////////////////////////////////////////////////////////////////////////////////
 
 // 1.0 - clearfix
@@ -15,4 +16,17 @@
 }
 
 // END 1.0 - clearfix
+//******************************************************************************
+
+// 2.0 - center-h-v
+//******************************************************************************
+
+@mixin center-h-v {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+// END 2.0 - center-h-v
 //******************************************************************************
