--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -208,10 +208,11 @@
     //**************************************************************************
     
     &__cta {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include center-h-v;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
         width: 90%;
         text-align: center;
     }
