--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -35,6 +35,19 @@ html {
     (10 / 16) * 100 = 62.5
     */
     font-size: 62.5%;
+
+    @include respond(phone) {
+        font-size: 50%;
+    }
+    @include respond(tab-port) {
+        font-size: 60%;
+    }
+    @include respond(tab-land) {
+        font-size: 70%;
+    }
+    @include respond(big-desktop) {
+        font-size: 80%;
+    }
 }
 
 // END 2.0 - html
